// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/request_button/request_button.jsx should match snapshot 1`] = `
<div
  className="form-group"
>
  <div
    className="col-sm-offset-4 col-sm-8"
  >
    <div>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <LoadingWrapper
          loading={false}
          text="Loading..."
        >
          <MemoizedFormattedMessage
            defaultMessage="Button Text"
            id="test2"
          />
        </LoadingWrapper>
      </button>
    </div>
    <div
      className="help-text"
    >
      <MemoizedFormattedMessage
        defaultMessage="Help Text"
        id="test1"
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 1`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Error Message: {error}",
      "id": "error.message",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={true}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={true}
  successMessage={
    Object {
      "defaultMessage": "Test Successful",
      "id": "admin.requestButton.requestSuccess",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <LoadingWrapper
            loading={false}
            text="Loading..."
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </LoadingWrapper>
        </button>
        <div>
          <div
            className="alert alert-warning"
          >
            <WarningIcon
              additionalClassName={null}
            >
              <LocalizedIcon
                className="fa fa-warning"
                title={
                  Object {
                    "defaultMessage": "Warning Icon",
                    "id": "generic_icons.warning",
                  }
                }
              >
                <i
                  className="fa fa-warning"
                  title="Warning Icon"
                />
              </LocalizedIcon>
            </WarningIcon>
            <FormattedMessage
              defaultMessage="Error Message: {error}"
              id="error.message"
              values={
                Object {
                  "error": "__message__ - __detailed_error__",
                }
              }
            >
              <span>
                Error Message: __message__ - __detailed_error__
              </span>
            </FormattedMessage>
          </div>
        </div>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 2`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Error Message: {error}",
      "id": "error.message",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={false}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={true}
  successMessage={
    Object {
      "defaultMessage": "Test Successful",
      "id": "admin.requestButton.requestSuccess",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <LoadingWrapper
            loading={false}
            text="Loading..."
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </LoadingWrapper>
        </button>
        <div>
          <div
            className="alert alert-warning"
          >
            <WarningIcon
              additionalClassName={null}
            >
              <LocalizedIcon
                className="fa fa-warning"
                title={
                  Object {
                    "defaultMessage": "Warning Icon",
                    "id": "generic_icons.warning",
                  }
                }
              >
                <i
                  className="fa fa-warning"
                  title="Warning Icon"
                />
              </LocalizedIcon>
            </WarningIcon>
            <FormattedMessage
              defaultMessage="Error Message: {error}"
              id="error.message"
              values={
                Object {
                  "error": "__message__",
                }
              }
            >
              <span>
                Error Message: __message__
              </span>
            </FormattedMessage>
          </div>
        </div>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 1`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Test Failure: {error}",
      "id": "admin.requestButton.requestFailure",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={false}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={true}
  successMessage={
    Object {
      "defaultMessage": "Success Message",
      "id": "success.message",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <LoadingWrapper
            loading={false}
            text="Loading..."
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </LoadingWrapper>
        </button>
        <div>
          <div
            className="alert alert-success"
          >
            <SuccessIcon>
              <LocalizedIcon
                className="fa fa-check"
                title={
                  Object {
                    "defaultMessage": "Success Icon",
                    "id": "generic_icons.success",
                  }
                }
              >
                <i
                  className="fa fa-check"
                  title="Success Icon"
                />
              </LocalizedIcon>
            </SuccessIcon>
            <FormattedMessage
              defaultMessage="Success Message"
              id="success.message"
            >
              <span>
                Success Message
              </span>
            </FormattedMessage>
          </div>
        </div>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 2`] = `
<RequestButton
  buttonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Button Text"
      id="test2"
    />
  }
  disabled={false}
  errorMessage={
    Object {
      "defaultMessage": "Test Failure: {error}",
      "id": "admin.requestButton.requestFailure",
    }
  }
  helpText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Help Text"
      id="test1"
    />
  }
  includeDetailedError={false}
  requestAction={
    [MockFunction] {
      "calls": Array [
        Array [
          [Function],
          [Function],
        ],
        Array [
          [Function],
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  saveNeeded={false}
  showSuccessMessage={false}
  successMessage={
    Object {
      "defaultMessage": "Success Message",
      "id": "success.message",
    }
  }
>
  <div
    className="form-group"
  >
    <div
      className="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <LoadingWrapper
            loading={false}
            text="Loading..."
          >
            <FormattedMessage
              defaultMessage="Button Text"
              id="test2"
            >
              <span>
                Button Text
              </span>
            </FormattedMessage>
          </LoadingWrapper>
        </button>
      </div>
      <div
        className="help-text"
      >
        <FormattedMessage
          defaultMessage="Help Text"
          id="test1"
        >
          <span>
            Help Text
          </span>
        </FormattedMessage>
      </div>
    </div>
  </div>
</RequestButton>
`;
